--- a/Homework 17.03/Homework 17.03.html
+++ b/Homework 17.03/Homework 17.03.html
@@ -11,8 +11,8 @@
         <br/>
         <h2>By watching the video, can you guess what is the size of the space station?</h2>
         <form action="./Homework17.03_p2.html">
-        <video height="200" preload="metadata" poster="./iss.jpg" controls muted>
-            <source src="./iss animation.mp4" type="video/mp4">
+        <video height="200" preload="metadata" poster="./AudioVideo/iss.jpg" controls muted>
+            <source src="./AudioVideo/iss animation.mp4" type="video/mp4">
         </video>
         <ol type="A">
             <li><input type="radio" name="size" value="350m x 235m">350m x 235m</li>
